<resources>
    <string name="app_name">云书包老师版</string>

    <string name="first_page">首页</string>
    <string name="mine">我的</string>
    <string name="clazz">班级</string>
    <string name="textbook_name">%1$s - %2$s - %3$s</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>

    <!--<item>自定义</item>-->
    <array name="bottom_test">
        <item>系统试卷</item>
        <item>组卷</item>
        <item>我的试卷</item>
        <item>发布班级</item>
    </array>

    <array name="bottom_work">
        <item>智能推送</item>
        <item>发布小组</item>
        <item>发布班级</item>
    </array>
    <string name="wrong_question_feedback">错题反馈</string>
    <string name="wrong_question_feedback_hint">如果您发现题目错误，请及时反馈给我们，感谢您的大力支持</string>
    <!--学习小组start-->
    <string name="create_group">创建小组</string>
    <string name="manage_group">管理小组</string>
    <string name="delete_group">删除小组</string>
    <string name="student_count">学生人数：%1$d人</string>
    <string name="group_name_hint">请输入小组名称</string>
    <string name="group_name_info">请选择小组成员</string>
    <string name="group_member">小组成员 长按设置组长</string>
    <string name="set_group_leader">设置为组长</string>
    <string name="cancel_group_leader">取消设置组长</string>
    <!--学习小组end-->

    <string name="class_photos">班级相册</string>
    <string name="study_group">学习小组</string>
    <string name="course_schedule">课程表</string>
    <string name="course_teaching">所教课程</string>
    <string name="class_expression">课堂表现</string>
    <string name="notice_time">发布时间：%1$s</string>

    <!--创建班级start-->
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="course">课程</string>
    <string name="city">城市</string>
    <string name="phase">阶段</string>
    <string name="campus">校区</string>
    <string name="select_school_hint">请选择学校</string>
    <string name="select_grade_hint">请选择年级</string>
    <string name="select_class_hint">请输入班别：例如“1班”</string>
    <string name="select_course_hint">请选择课程</string>
    <string name="select_city_hint">请选择所在城市</string>
    <string name="select_phase_hint">请选择教育阶段</string>
    <!--创建班级end-->
    <!--个人信息start-->
    <string name="head_image">头像</string>
    <string name="name">姓名</string>
    <string name="bag">书包号</string>
    <string name="sex">性别</string>
    <string name="contact_information">联系方式</string>
    <string name="family_address">家庭住址</string>
    <string name="school_name">所在学校</string>
    <!--个人信息end-->
    <!--设置start-->
    <string name="version_update">版本更新</string>
    <string name="office_notice">官方公告</string>
    <string name="user_feedback">用户反馈</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登录</string>
    <!--设置end-->
    <string name="about_us_name">云书包老师端</string>
</resources>
