<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:paddingStart="@dimen/x5"
    android:paddingEnd="@dimen/x5"
    android:paddingTop="@dimen/y15"
    android:paddingBottom="@dimen/y15"
    >
    <TextView android:id="@+id/cancelTv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="@dimen/tv_sub"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        />
    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_group"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/title_bar_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView android:id="@+id/confirmTv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="@dimen/tv_sub"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText android:id="@+id/groupNameEdit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y60"
        android:paddingStart="@dimen/x5"
        android:paddingEnd="@dimen/x5"
        android:maxLength="10"
        android:background="@drawable/gray_corners_stroke"
        android:hint="@string/group_name_hint"
        android:textSize="@dimen/tv_normal"
        android:layout_marginTop="@dimen/y15"
        app:layout_constraintTop_toBottomOf="@id/title"
        />
    <LinearLayout android:id="@+id/allLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/gray_corners_stroke"
        android:layout_marginTop="@dimen/y15"
        app:layout_constraintTop_toBottomOf="@id/groupNameEdit"
        app:layout_constraintBottom_toTopOf="@id/memberLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/tv_normal"
            android:textColor="@color/title_text_color"
            android:background="@drawable/group_hint_bg"
            android:text="@string/group_name_info"
            />
        <android.support.v7.widget.RecyclerView android:id="@+id/allRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/memberLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/y15"
        android:orientation="vertical"
        android:background="@drawable/gray_corners_stroke"
        app:layout_constraintTop_toBottomOf="@id/allLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView android:id="@+id/groupMemberTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/tv_normal"
            android:textColor="@color/title_text_color"
            android:background="@drawable/group_hint_bg"
            android:text="@string/group_member"
            />
        <android.support.v7.widget.RecyclerView android:id="@+id/selectedRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ebag.core.widget.empty.StateView android:id="@+id/stateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</android.support.constraint.ConstraintLayout>