<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ebag.mobile.widget.TitleBar android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="设置"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        >
        <RelativeLayout
            android:id="@+id/re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ebag.core.widget.drawable.DrawableTextView android:id="@+id/versionUpdate"
                style="@style/setting_item"
                android:text="@string/version_update"
                app:leftDrawable="@drawable/setting_update"
                />
            <TextView
                android:id="@+id/versionName"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/x23"
                android:paddingTop="@dimen/y15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_normal"
                tools:ignore="NotSibling" />

        </RelativeLayout>
        <ebag.core.widget.drawable.DrawableTextView android:id="@+id/officeNotice"
            style="@style/setting_item"
            android:text="@string/office_notice"
            app:leftDrawable="@drawable/setting_notice"
            />
        <ebag.core.widget.drawable.DrawableTextView android:id="@+id/userFeedback"
            style="@style/setting_item"
            android:text="@string/user_feedback"
            app:leftDrawable="@drawable/setting_feedback"
            />
        <ebag.core.widget.drawable.DrawableTextView android:id="@+id/aboutUs"
            style="@style/setting_item"
            android:text="@string/about_us"
            app:leftDrawable="@drawable/setting_about_us"
            />
    </LinearLayout>
    <TextView android:id="@+id/exitLogin"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/y90"
        android:background="@drawable/login_btn_bac"
        android:text="退出登录"
        android:textSize="@dimen/tv_big"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.8"
        />
</android.support.constraint.ConstraintLayout>